[project]
name = "delta-station"
version = "0.1.0"
description = "Delta地点定点観測データ自動取得システム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]
